<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#EAEAEA">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/txtTitleName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:textSize="@dimen/_14sdp"
                app:expandedTitleMarginBottom="@dimen/_30sdp"
                app:layout_scrollFlags="enterAlways|scroll|snap|exitUntilCollapsed"
                app:scrimAnimationDuration="0"
                app:titleCollapseMode="scale">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/llLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/dark_blue"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginVertical="@dimen/_10sdp"
                            android:layout_marginStart="@dimen/_12sdp"
                            android:layout_weight="1"
                            android:text="@string/all_pdf_viewer"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/icSearch"
                            style="?attr/materialIconButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:minHeight="0dp"
                            android:padding="@dimen/_5sdp"
                            app:icon="@drawable/ic_search"
                            app:iconSize="@dimen/_20sdp"
                            app:iconTint="@color/white"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:visibility="visible" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/search"
                        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/dark_blue"
                        android:visibility="gone"
                        app:boxBackgroundColor="@color/dark_blue"
                        app:boxCornerRadiusBottomEnd="@dimen/_10sdp"
                        app:boxCornerRadiusBottomStart="@dimen/_10sdp"
                        app:boxCornerRadiusTopEnd="@dimen/_10sdp"
                        app:boxCornerRadiusTopStart="@dimen/_10sdp"
                        app:boxStrokeColor="@color/dark_blue"
                        app:boxStrokeWidth="1dp"
                        app:boxStrokeWidthFocused="1dp"
                        app:hintEnabled="false"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:visibility="visible">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etSearch"
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="@dimen/_10sdp"
                            android:layout_marginVertical="@dimen/_10sdp"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:backgroundTint="@color/white"
                            android:drawableEnd="@drawable/ic_close"
                            android:inputType="none"
                            android:paddingVertical="@dimen/_7sdp"
                            android:paddingEnd="@dimen/_5sdp"
                            android:textSize="@dimen/_14sdp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/tabLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:tabBackground="@color/white"
                        app:tabMode="scrollable"
                        app:tabSelectedTextColor="@color/dark_blue"
                        app:tabTextColor="@color/text_gray">

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="All" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="PDF" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Word" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Excel" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="PPT" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="TXT" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="APK" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="JPG" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="PNG" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="MP4" />

                        <com.google.android.material.tabs.TabItem
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="MP3" />

                    </com.google.android.material.tabs.TabLayout>
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/llNoPermission"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:orientation="vertical"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/imgPermission"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/img_request" />

            <TextView
                android:id="@+id/tvPermission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/no_permission"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/permission_is_required_to_access_all_files" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:backgroundTint="@color/dark_blue"
                android:text="@string/go_to_set"
                app:cornerRadius="@dimen/_5sdp" />
        </LinearLayout>


        <TextView
            android:id="@+id/tvSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textColor="@color/text_gray"
            android:textFontWeight="600"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:text="Documents" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvDocuments"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_25sdp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:listitem="@layout/list_item_pdf"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/dark_blue"
            android:visibility="gone" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</LinearLayout>